chore(server): add cert curd
